--- a/apps/base/templates/factura/register.html
+++ b/apps/base/templates/factura/register.html
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="register-box" style="width:640px">
+<div class="register-box">
     <div class="register-logo" style="height: 12rem;">
         <img src="{% static 'img/logo-sabores.png' %}" style="max-height: 100%;">
     </div>
