--- a/apps/base/templates/factura/search.html
+++ b/apps/base/templates/factura/search.html
@@ -25,7 +25,7 @@
 
 </head>
 <body class="hold-transition register-page" style="height: auto;">
-<div class="register-box">
+<div class="register-box" style="width:360px;">
     <div class="register-logo">
         <a href="{% static 'vendor/admin-lte/index2.html' %}">
             <img src="{% static 'img/logo-sabores.png' %}" style="width:100%">
