--- a/apps/base/templates/factura/factura.html
+++ b/apps/base/templates/factura/factura.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load custom_tags %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -34,33 +35,37 @@
             <div class="modal-header">
                 Confirm Submit
             </div>
+
             <div class="modal-body">
                 Por favor, confirme que los datos sean correctos.
 
                 <!-- We display the details entered by the user here -->
-                <table class="table">
-                    <tr>
-                        <th>ID de compra</th>
-                        <td id="fmeli_id"></td>
-                    </tr>
-                    <tr>
-                        <th>Total</th>
-                        <td id="ftotal"></td>
-                    </tr>
-                    <tr>
-                        <th>Uso de CFDI</th>
-                        <td id="fuso_cfdi"></td>
-                    </tr>
-                    <tr>
-                        <th>Forma de pago</th>
-                        <td id="fforma_pago"></td>
-                    </tr>
-                </table>
+                <div class="form-row">
+                    {% for key, value in customer_fields.items %}
+                    <div class="col-md-6">
+                        <div class="form-floating">
+                            <input type="text" class="textinput textInput form-control invoice-detail" id="{{ key }}"
+                                   value="{{ customer|get_obj_attr:key }}" readonly>
+                            <label for="{{ key }}">{{ value }}</label>
+                        </div>
+                    </div>
+                    {% endfor %}
+                    {% for key, value in invoice_fields.items %}
+                    <div class="col-md-6">
+                        <div class="form-floating">
+                            <input type="text" class="textinput textInput form-control invoice-detail" id="f{{ key }}"
+                                   value="" readonly>
+                            <label for="f{{ key }}">{{ value }}</label>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+
 
             </div>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-default" data-bs-dismiss="modal">Cancel</button>
                 <a href="#" id="submit" class="btn btn-success success">Submit</a>
             </div>
         </div>
@@ -83,8 +88,8 @@
                 {% load crispy_forms_tags %}
                 {% crispy form %}
 
-                <input type="button" name="btn" value="Submit" id="submitBtn" data-toggle="modal"
-                       data-target="#confirm-submit" class="btn btn-success btn-block"/>
+                <input type="button" name="btn" value="Submit" id="submitBtn" data-bs-toggle="modal"
+                       data-bs-target="#confirm-submit" class="btn btn-success btn-block"/>
                 <!--                <button type="submit" class="btn btn-success btn-block" id="submitButton">Enviar</button>-->
             </form>
         </div>
@@ -96,24 +101,33 @@
 <!-- jQuery -->
 <script src="{% static 'vendor/admin-lte/plugins/jquery/jquery.min.js' %}"></script>
 <!-- Bootstrap 4 -->
-<script src="{% static 'vendor/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'vendor/bootstrap-5.1.3-dist/js/bootstrap.bundle.js' %}"></script>
 <!-- AdminLTE App -->
 <script src="{% static 'vendor/admin-lte/dist/js/adminlte.min.js' %}"></script>
 <!-- Factura Form -->
 <script type="text/javascript">
-    $('#submitBtn').click(function() {
+$('#submitBtn').click(function() {
      /* when the button in the form, display the entered values in the modal */
-     $('#fmeli_id').text($('#id_meli_id').val());
-     $('#ftotal').text($('#id_total').val());
-     $('#fuso_cfdi').text($('#id_uso_cfdi').val());
-     $('#fforma_pago').text($('#id_forma_pago').val());
+     $('#fmeli_id').val($('#id_meli_id').val());
+     $('#ftotal').val($('#id_total').val());
+     $('#fuso_cfdi').val($('#id_uso_cfdi').val() + " - " + $('#id_uso_cfdi option:selected').text());
+     $('#fforma_pago').val($('#id_forma_pago').val() + " - " + $('#id_forma_pago option:selected').text());
 });
 
 $('#submit').click(function(){
      /* when the submit button in the modal is clicked, submit the form */
-    alert('submitting');
     $('#factura_form').submit();
 });
+
+
+
+
+
+
+
+
+
+
 
 
 </script>
