--- a/apps/base/templates/common/wizard.html
+++ b/apps/base/templates/common/wizard.html
@@ -106,17 +106,27 @@
             </button>
         </div>
         <div class="card-body register-card-body">
-            <div class="text-center">
-                <h5>Ingresa los datos de tu compra y las opciones para la factura.</h5>
-            </div>
-            <form id="factura_form" method="POST" style="margin-top: 2rem;" class="needs-validation">
-                {% csrf_token %}
-                {% load crispy_forms_tags %}
-                {% crispy form %}
-
-                <input type="button" name="btn" value="Submit" id="submitBtn"
-                       data-bs-target="#confirm-submit" class="btn btn-success btn-block"/>
-                <!--                <button type="submit" class="btn btn-success btn-block" id="submitButton">Enviar</button>-->
+            <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
+            <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
+                <table>
+                    {{ wizard.management_form }}
+                    {% if wizard.form.forms %}
+                    {{ wizard.form.management_form }}
+                    {% for form in wizard.form.forms %}
+                    {{ form }}
+                    {% endfor %}
+                    {% else %}
+                    {{ wizard.form }}
+                    {% endif %}
+                </table>
+                {% if wizard.steps.prev %}
+                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step"
+                    %}
+                </button>
+                <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}
+                </button>
+                {% endif %}
+                <input type="submit" value="{% trans " submit" %}"/>
             </form>
         </div>
         <!-- /.form-box -->
@@ -132,53 +142,6 @@
 <script src="{% static 'vendor/admin-lte/dist/js/adminlte.min.js' %}"></script>
 <!-- Factura Form -->
 <script type="text/javascript">
-$("#back").click(function () {
-    window.location = "{% url 'Factura:update' customer.pk %}?id_compra=" + $('#id_meli_id').val() + "&total=" + $('#id_total').val();
-});
-
-$('#submitBtn').click(function(event) {
-    var m_id=$('#id_meli_id').val();
-    var tot=$('#id_total').val();
-
-    if (m_id==null || m_id==""){
-        $("#id_meli_id").addClass("is-invalid");
-        $("#div_id_meli_id").append('<div class="invalid-feedback">Es necesario que ingreses el ID de tu compra.</div>');
-    } else if(tot==null || tot==""){
-        $("#id_total").addClass("is-invalid");
-        var div_total=$("#id_total");
-        div_total.parent().append('<div class="invalid-feedback">Es necesario que ingreses el monto total de tu compra.</div>');
-    } else {
-        /* when the button in the form, display the entered values in the modal */
-        $('#fmeli_id').val($('#id_meli_id').val());
-        $('#ftotal').val('$ ' + $('#id_total').val());
-        $('#fuso_cfdi').val($('#id_uso_cfdi').val() + " - " + $('#id_uso_cfdi option:selected').text());
-        $('#fforma_pago').val($('#id_forma_pago').val() + " - " + $('#id_forma_pago option:selected').text());
-        $("#confirm-submit").modal('show');
-    }
-    $("factura_form").addClass('was-validated');
-});
-
-$('#submit').click(function(){
-     /* when the submit button in the modal is clicked, submit the form */
-    $('#factura_form').submit();
-});
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </script>
 </body>
 </html>
