--- a/apps/base/templates/factura/factura.html
+++ b/apps/base/templates/factura/factura.html
@@ -133,7 +133,7 @@
 <!-- Factura Form -->
 <script type="text/javascript">
 $("#back").click(function () {
-    window.location = "{% url 'Factura:update' customer.pk %}?id_compra=" + $('#id_meli_id').val() + "&total=" + $('#id_total').val();
+    window.location = "{% url 'Factura:update' meli_sale customer.pk %}?id_compra=" + $('#id_meli_id').val() + "&total=" + $('#id_total').val();
 });
 
 $('#submitBtn').click(function(event) {
@@ -150,7 +150,7 @@ $('#submitBtn').click(function(event) {
     } else {
         /* when the button in the form, display the entered values in the modal */
         $('#fmeli_id').val($('#id_meli_id').val());
-        $('#ftotal').val('$ ' + $('#id_total').val());
+        $('#ftotal').val($('#id_total').val());
         $('#fuso_cfdi').val($('#id_uso_cfdi').val() + " - " + $('#id_uso_cfdi option:selected').text());
         $('#fforma_pago').val($('#id_forma_pago').val() + " - " + $('#id_forma_pago option:selected').text());
         $("#confirm-submit").modal('show');
@@ -160,24 +160,104 @@ $('#submitBtn').click(function(event) {
 
 $('#submit').click(function(){
      /* when the submit button in the modal is clicked, submit the form */
+     var total = $('#id_total').val();
+     if (total.startsWith('$   ')){
+        total = total.slice(4);
+        $('#id_total').val(total);
+     }
     $('#factura_form').submit();
 });
 
 
 
+$("input[data-type='currency']").on({
+    keyup: function() {
+      formatCurrency($(this).id);
+    },
+    blur: function() {
+      formatCurrency($(this), "blur");
+    }
+});
 
 
+function formatNumber(n) {
+  // format number 1000000 to 1,234,567
+  return n.replace(/\D/g, "").replace(/\B(?=(\d{3})+(?!\d))/g, ",")
+}
 
 
+function formatCurrency(input, blur) {
+    if(input == undefined) {
+        var input = $('#id_total')
+    }
 
+  // appends $ to value, validates decimal side
+  // and puts cursor back in right position.
 
+  // get input value
+  var input_val = input.val();
 
+  // don't validate empty input
+  if (input_val === "") { return; }
 
+  // original length
+  var original_len = input_val.length;
 
+  // initial caret position
+  var caret_pos = input.prop("selectionStart");
 
+  // check for decimal
+  if (input_val.indexOf(".") >= 0) {
 
+    // get position of first decimal
+    // this prevents multiple decimals from
+    // being entered
+    var decimal_pos = input_val.indexOf(".");
 
+    // split number by decimal point
+    var left_side = input_val.substring(0, decimal_pos);
+    var right_side = input_val.substring(decimal_pos);
 
+    // add commas to left side of number
+    left_side = formatNumber(left_side);
+
+    // validate right side
+    right_side = formatNumber(right_side);
+
+    // On blur make sure 2 numbers after decimal
+    if (blur === "blur") {
+      right_side += "00";
+    }
+
+    // Limit decimal to only 2 digits
+    right_side = right_side.substring(0, 2);
+
+    // join number by .
+    input_val = "$   " + left_side + "." + right_side;
+
+  } else {
+    // no decimal entered
+    // add commas to number
+    // remove all non-digits
+    input_val = formatNumber(input_val);
+    input_val = "$   " + input_val + '.00';
+
+    // final formatting
+    if (blur === "blur") {
+      input_val += ".00";
+    }
+  }
+
+  // send updated string to input
+  input.val(input_val);
+
+  // put caret back in the right position
+  var updated_len = input_val.length;
+  caret_pos = updated_len - original_len + caret_pos;
+  input[0].setSelectionRange(caret_pos, caret_pos);
+}
+
+formatCurrency();
 
 </script>
 </body>
