--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
-<strong>Copyright &copy; 2022 <a href="https://adminlte.io">Balaam León</a>.</strong>
+<strong>Copyright &copy; 2022 <a href="#">Balaam León</a>.</strong>
 All rights reserved.
 <div class="float-right d-none d-sm-inline-block">
-    <b>Version</b> 3.2.0
+    <b>Version</b> 1.0
 </div>
