--- a/templates/javascript_footer.html
+++ b/templates/javascript_footer.html
@@ -33,9 +33,9 @@
 <!-- AdminLTE App -->
 <script src="{% static 'vendor/admin-lte/dist/js/adminlte.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
-<script src="{% static 'vendor/admin-lte/dist/js/demo.js' %}"></script>
+<!--<script src="{% static 'vendor/admin-lte/dist/js/demo.js' %}"></script>-->
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="{% static 'vendor/admin-lte/dist/js/pages/dashboard.js' %}"></script>
+<!--<script src="{% static 'vendor/admin-lte/dist/js/pages/dashboard.js' %}"></script>-->
 
 <!-- Django Select2 -->
 <script type="text/javascript" src="{% static 'vendor/django_select2/django_select2.js' %}"></script>
@@ -62,4 +62,4 @@
 <script src="{% static 'vendor/admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
 
 <!-- All pages -->
-<script src="{% static 'dist/js/pages/all_pages.js' %}"></script>
+<!--<script src="{% static 'dist/js/pages/all_pages.js' %}"></script>-->
