--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -90,15 +90,64 @@
                 </a>
                 <ul class="nav nav-treeview">
                     <li class="nav-item">
-                        <a href="{% url 'Invoice:list' %}" class="nav-link">
+                        <a href="{% url 'Invoice:list' 'tracking' %}" class="nav-link">
                             <i class="fas fa-list nav-icon"></i>
-                            <p>{% translate 'Invoices List' %}</p>
+                            <p>{% translate 'With tracking' %}</p>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'Invoice:add' %}" class="nav-link">
-                            <i class="fas fa-plus-circle nav-icon"></i>
-                            <p>{% translate 'New Invoice' %}</p>
+                        <a href="{% url 'Invoice:list' 'pending' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'Pending' %}</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Invoice:list' 'emitted' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'To Send' %}</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Invoice:list' 'sent' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'Sent' %}</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Invoice:list' 'cancelled' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'Cancelled' %}</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Invoice:list' 'all' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'All' %}</p>
+                        </a>
+                    </li>
+                </ul>
+            </li>
+
+            <!-- Sales -->
+            <li class="nav-item">
+                <a href="#" class="nav-link">
+                    <i class="nav-icon fas fa-shopping-cart"></i>
+                    <p>
+                        {% translate 'Sales' %}
+                        <i class="fas fa-angle-left right"></i>
+                    </p>
+                </a>
+                <ul class="nav nav-treeview">
+                    <li class="nav-item">
+                        <a href="{% url 'Sale:list' 'new_messages' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'New messages' %}</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url 'Sale:list' 'all' %}" class="nav-link">
+                            <i class="fas fa-list nav-icon"></i>
+                            <p>{% translate 'All' %}</p>
                         </a>
                     </li>
                 </ul>
