--- a/templates/stylesheet.html
+++ b/templates/stylesheet.html
@@ -5,7 +5,8 @@
 <!-- Google Font: Source Sans Pro -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 <!-- Font Awesome -->
-<link rel="stylesheet" href="{% static 'vendor/admin-lte/plugins/fontawesome-free/css/all.min.css' %}">
+<!--<link rel="stylesheet" href="{% static 'vendor/admin-lte/plugins/fontawesome-free/css/all.css' %}">-->
+<link rel="stylesheet" href="{% static 'vendor/fontawesome/css/all.css' %}">
 <!-- Ionicons -->
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 <!-- Tempusdominus Bootstrap 4 -->
@@ -54,3 +55,5 @@
 
 <!-- Custom style -->
 <link rel="stylesheet" href="{% static 'dist/css/custom.css' %}">
+<link rel="stylesheet" href="{% static 'dist/css/meli.css' %}">
+<link rel="stylesheet" href="{% static 'dist/css/_palette.scss' %}">
