--- a/apps/base/templates/common/delete.html
+++ b/apps/base/templates/common/delete.html
@@ -11,7 +11,7 @@
     <p class="small text-justify">{{ _('Press <u>"Cancel"</u> to cancel the action.') }}</p>
 </div>
 <div class="modal-footer justify-content-between">
-    <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-sm btn-default" data-bs-dismiss="modal">{{ _('Cancel') }}</button>
     <form method="post" role="form" action="{% url action_url object.pk %}">
         {% csrf_token %}
         <button type="submit" class="btn btn-sm btn-danger">{{ _('Delete') }}</button>
