--- a/apps/base/templates/auth/login.html
+++ b/apps/base/templates/auth/login.html
@@ -19,13 +19,13 @@
                         <div class="icheck-primary">
                             <label class="custom-control custom-checkbox">
                                 <input type="checkbox" name="remember_me" class="checkboxinput form-check-input"
-                                       id="id_remember_me"> Remember me
+                                       id="id_remember_me"> {% trans "Remember me" %}
                             </label>
                         </div>
                     </div>
                     <!-- /.col -->
                     <div class="col-4">
-                        <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+                        <button type="submit" class="btn btn-primary btn-block">{% trans "Sign In" %}</button>
                     </div>
                     <!-- /.col -->
                 </div>
