--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -153,6 +153,16 @@
                 </ul>
             </li>
 
+            <!-- Predefined Answers -->
+            <li class="nav-item">
+                <a href="{% url 'Answer:list' %}" class="nav-link">
+                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                    <p>
+                        {% translate 'Predefined Answers' %}
+                    </p>
+                </a>
+            </li>
+
 
         </ul>
     </nav>
