--- a/apps/base/templates/sales/chat.html
+++ b/apps/base/templates/sales/chat.html
@@ -37,9 +37,11 @@
             {{ message.text }}
             {% if message.attachment %}
             {% if message.attachment.type|slice:":5" == 'image' %}
-            <img src="{{ message.attachment.url }}" style="max-width: 100%; max-height: 100%;">
+            <a href="{% url 'Sale:attachment' message.attachment.file %}" target="_blank">
+                <img src="{% url 'Sale:attachment' message.attachment.file %}" style="width: 150px;height: 150px;object-fit: cover;object-position: top;">
+            </a>
             {% else %}
-            <a href="{{ message.attachment.url }}" target="_blank">{{ message.attachment.filename }}</a>
+            <a href="{% url 'Sale:attachment' message.attachment.file %}" target="_blank">{{ message.attachment.name }}</a>
             {% endif %}
             {% endif %}
         </div>
